<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendsTracking</string>
    <string name="action_settings">Settings</string>
    <string name="IP">192.168.43.64</string>
    <string name="loading_title">Loading…</string>
    <string name="loading_message">Loading… Please wait</string>
    <string name="find_friend">Find a friend</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="country">Country:</string>
    <string name="nick">Nick:</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="takePhoto">Take Photo</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">Bicycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="str_btn_draw">Draw Route</string>
    <string name="app_id">141712532702607</string>
	<string name="str_tv_From">Fr</string>
	<string name="str_tv_To">To</string>
	<string name="str_btnOK">OK</string>
	<string name="no_location_error">Could not obtain your current location</string>
	<string name="exception">Exception: %1$s</string>
	<string name="error_dialog_title">Something Went Wrong</string>
	<string name="error_dialog_button_text">OK</string>
	
</resources>